using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MyConstDefine
{
    #region 动画事件  玩家
    /// <summary>
    /// 玩家前进
    /// </summary>
    public const string PLAYER_FORWARD = "Forward";
    /// <summary>
    /// 跳跃
    /// </summary>
    public const string PLAYER_JUMP = "Jump";
    /// <summary>
    /// 着陆
    /// </summary>
    public const string PLAYER_ONGROUND = "IsOnGround";
    /// <summary>
    /// 掉落后前滚翻
    /// </summary>
    public const string PLAYER_ROLL = "Roll";
    #endregion
}
